# Med-X-KimiK2-RAG

./: .gitignore  DELIVERY_SUMMARY.md  PACKAGING_REPORT.md  README.md  TESTING_QUICK_START.md  TEST_PLAN.md  demo_package.sh  pyproject.toml  pytest.ini  setup.py
.github/workflows/: ci.yml
medex/: __init__.py  adapters.py  app.py  app_streamlit_wrapper.py  cli.py  config.py
tests/: conftest.py  test_adapters.py  test_app.py  test_cli.py  test_config.py  test_imports.py  test_legacy_opt.py  test_smoke.py
