[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medex"
version = "0.1.0"
description = "Clinical reasoning assistant (educational) with RAG"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "DeepRatAI" }]
dependencies = [
  "openai>=1.0.0",
  "streamlit>=1.28.0",
  "streamlit-chat>=0.1.1",
  "transformers>=4.21.0",
  "sentence-transformers>=2.2.0",
  "torch>=1.9.0",
  "numpy>=1.21.0",
  "scikit-learn>=1.0.0",
  "scipy>=1.7.0",
  "pandas>=1.3.0",
  "requests>=2.28.0",
  "aiohttp>=3.8.0",
  "websockets>=10.0",
  "Pillow>=8.3.0",
  "opencv-python-headless>=4.5.0",
  "markdown>=3.4.0",
  "click>=8.1.7",
  "pytest>=6.0.0",
  "pytest-asyncio>=0.19.0"
]

[project.scripts]
medex = "medex.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["medex*"]

