[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medex"
version = "0.1.0"
description = "MedeX — Clinical reasoning assistant (educational) with RAG"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "DeepRatAI" }]

# Dependencias mínimas y coherentes (sin duplicados)
dependencies = [
  "openai>=1.0.0",
  "streamlit>=1.28.0",
  "streamlit-chat>=0.1.1",
  "transformers>=4.44.0",
  "sentence-transformers>=2.2.2",
  "torch>=2.2.0",
  "numpy>=1.24.0",
  "scikit-learn>=1.3.0",
  "scipy>=1.10.0",
  "pandas>=2.0.0",
  "requests>=2.31.0",
  "aiohttp>=3.9.0",
  "websockets>=10.0",
  "Pillow>=9.5.0",
  "opencv-python-headless>=4.8.0",
  "markdown>=3.4.0",
  "click>=8.1.7",
  "pytest>=7.4.0",
  "pytest-asyncio>=0.21.0"
]

[project.scripts]
medex = "medex.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["medex*"]
